--- a/my-pwd-vue-proj/style.css
+++ b/my-pwd-vue-proj/style.css
@@ -1,10 +1,10 @@
 /* Prevent scrolling */
 html, body {
+  overflow: clip;
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   display: flex;
 }
 
