--- a/my-pwd-vue-proj/style.css
+++ b/my-pwd-vue-proj/style.css
@@ -1,12 +1,7 @@
-
 html, body {
-  overflow: clip;
+  height: auto;
+  overflow-y: auto;
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 100vh;
-  display: flex;
-  
 }
-
-
